--- a/styles/country.sass
+++ b/styles/country.sass
@@ -26,7 +26,7 @@ main
                    font-size: 40px
                    font-weight: 400
             .infos
-                width: 100%
+                width: 1600px
                 height: 500px
                 display: flex
                 flex-direction: row
@@ -39,11 +39,11 @@ main
                         height: 300px
                 .inform
                     width: 300px
-                    height: 100%
+                    height: 500px
                     line-height: 35px
                     display: flex
                     flex-direction: column
-                    margin-top: -7px
+                    margin-top: -120px
                     align-items: center
                     ul
                         list-style-type: none
