--- a/styles/country.css
+++ b/styles/country.css
@@ -33,8 +33,8 @@ main section .country .title h1 {
   font-weight: 400;
 }
 main section .country .infos {
-  width: 1600px;
-  height: 500px;
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -42,19 +42,20 @@ main section .country .infos {
   justify-content: space-between;
 }
 main section .country .infos .img {
-  height: 300px;
+  height: 500px;
+  width: 100px;
 }
 main section .country .infos .img img {
   height: 300px;
 }
 main section .country .infos .inform {
-  width: 300px;
-  height: 500px;
-  line-height: 35px;
+  width: 100px;
+  height: 1000px;
   display: flex;
   flex-direction: column;
-  margin-top: -120px;
-  align-items: center;
+  margin-top: -100px;
+  justify-content: flex-start;
+  align-items: flex-end;
 }
 main section .country .infos .inform ul {
   list-style-type: none;
@@ -107,7 +108,7 @@ footer {
   height: 100px;
   margin-top: 100px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -208,6 +209,8 @@ svg {
 
 .inform {
   width: 100% !important;
+  margin-top: 70px !important;
+  align-items: flex-start !important;
 }
 .inform ul {
   font-size: 20px !important;
@@ -216,17 +219,64 @@ svg {
 }
 
 .additional {
-  height: 200px !important;
+  height: 300px !important;
   width: 100% !important;
   flex-wrap: wrap !important;
 }
 .additional .td {
   width: 120px !important;
-  height: 70px !important;
+  height: 60px !important;
+  text-align: start !important;
 }
 .additional .td h3 {
   font-size: 20px !important;
+  text-align: start !important;
 }
 .additional .td span {
   font-size: 17px !important;
+  text-align: start !important;
+}
+
+@media screen and (max-width: 385px) {
+  svg {
+    width: 30px !important;
+    height: 30px !important;
+  }
+  .title {
+    width: 100% !important;
+    text-align: center;
+  }
+  .title h1 {
+    font-size: 30px !important;
+  }
+  .img {
+    height: 100px !important;
+  }
+  .infos {
+    flex-direction: column !important;
+  }
+  .inform {
+    width: 100% !important;
+    margin-top: 70px !important;
+  }
+  .inform ul {
+    font-size: 20px !important;
+    text-align: start;
+    line-height: 50px;
+  }
+  .additional {
+    height: 200px !important;
+    width: 100% !important;
+    flex-wrap: wrap !important;
+  }
+  .additional .td {
+    width: 80px !important;
+    height: 70px !important;
+  }
+  .additional .td h3 {
+    font-size: 20px !important;
+  }
+  .additional .td span {
+    font-size: 17px !important;
+  }
 }/*# sourceMappingURL=country.css.map */
