--- a/styles/country.sass
+++ b/styles/country.sass
@@ -26,25 +26,26 @@ main
                    font-size: 40px
                    font-weight: 400
             .infos
-                width: 1600px
-                height: 500px
+                width: 100%
+                height: 100vh
                 display: flex
                 flex-direction: row
                 align-items: flex-start
                 padding-top: 70px
                 justify-content: space-between
                 .img
-                    height: 300px
+                    height: 500px
+                    width: 100px
                     img
                         height: 300px
                 .inform
-                    width: 300px
-                    height: 500px
-                    line-height: 35px
+                    width: 100px
+                    height: 1000px
                     display: flex
                     flex-direction: column
-                    margin-top: -120px
-                    align-items: center
+                    margin-top: -100px
+                    justify-content: flex-start
+                    align-items: flex-end
                     ul
                         list-style-type: none
                         
@@ -87,7 +88,7 @@ footer
     height: 100px
     margin-top: 100px
     display: flex
-    flex-direction: row
+    flex-direction: column
     align-items: center
     justify-content: space-evenly
     span
@@ -162,19 +163,56 @@ svg
     flex-direction: column !important
 .inform
     width: 100% !important
+    margin-top: 70px !important
+    align-items: flex-start !important
     ul
         font-size: 20px !important
         text-align: start
         line-height: 50px
 .additional
-    height: 200px !important        
+    height: 300px !important        
     width: 100% !important
     flex-wrap: wrap !important
     .td
         width: 120px !important
-        height: 70px !important
+        height: 60px !important
+        text-align: start !important
         h3
             font-size: 20px !important
+            text-align: start !important
         span
             font-size: 17px !important
+            text-align: start !important
         
+@media screen and (max-width: 385px) 
+    svg
+        width: 30px !important
+        height: 30px  !important
+    .title
+        width: 100% !important
+        text-align: center
+        h1
+            font-size: 30px !important
+    .img
+        height: 100px !important
+    .infos
+        flex-direction: column !important
+    .inform
+        width: 100% !important
+        margin-top: 70px !important
+        ul
+            font-size: 20px !important
+            text-align: start
+            line-height: 50px
+    .additional
+        height: 200px !important        
+        width: 100% !important
+        flex-wrap: wrap !important
+        .td
+            width: 80px !important
+            height: 70px !important
+            h3
+                font-size: 20px !important
+            span
+                font-size: 17px !important
+            
