--- a/styles/country.sass
+++ b/styles/country.sass
@@ -23,12 +23,12 @@ main
             .title
                 text-align: center
                 h1
-                   font-size: 40px
-                   font-weight: 400
+                    font-size: 40px
+                    font-weight: 400
             .infos
                 width: 100%
-                height: 100vh
                 display: flex
+                height: 600px
                 flex-direction: row
                 align-items: flex-start
                 padding-top: 70px
@@ -39,25 +39,29 @@ main
                     img
                         height: 300px
                 .inform
-                    width: 100px
-                    height: 1000px
+                    width: 500px
+                    height: 100%
                     display: flex
                     flex-direction: column
-                    margin-top: -100px
+                    margin-top: -20px
                     justify-content: flex-start
                     align-items: flex-end
                     ul
                         list-style-type: none
-                        
+                        line-height: 45px
+                        font-size: 20px
+
                         span
                             color: #6c6c6c
             .additional
                 display: flex
                 flex-direction: row
                 align-items: center
+                width: 100%
+                height: 50px
                 justify-content: space-between
                 .td
-                    width: 140px
+                    width: 120px
                     display: flex
                     margin: 10px
                     flex-direction: column
@@ -66,13 +70,13 @@ main
                     justify-content: space-between
                     h3
                         font-weight: 400
-                        font-size: 17px
+                        font-size: 19px
                     .in
                         color: #6c6c6c
-                        font-size: 14px
+                        font-size: 15px
                     .ins
                         color: #6c6c6c
-                        font-size: 14px
+                        font-size: 15px
 
 .back
     cursor: pointer
@@ -149,40 +153,40 @@ footer
                 font-size: 20px !important
             
 @media screen and (max-width: 450px) 
-svg
-    width: 30px !important
-    height: 30px  !important
-.title
-    width: 100% !important
-    text-align: center
-    h1
-        font-size: 30px !important
-.img
-    height: 100px !important
-.infos
-    flex-direction: column !important
-.inform
-    width: 100% !important
-    margin-top: 70px !important
-    align-items: flex-start !important
-    ul
-        font-size: 20px !important
-        text-align: start
-        line-height: 50px
-.additional
-    height: 300px !important        
-    width: 100% !important
-    flex-wrap: wrap !important
-    .td
-        width: 120px !important
-        height: 60px !important
-        text-align: start !important
-        h3
+    svg
+        width: 30px !important
+        height: 30px  !important
+    .title
+        width: 100% !important
+        text-align: center
+        h1
+            font-size: 30px !important
+    .img
+        height: 100px !important
+    .infos
+        flex-direction: column !important
+    .inform
+        width: 100% !important
+        margin-top: 70px !important
+        align-items: flex-start !important
+        ul
             font-size: 20px !important
+            text-align: start
+            line-height: 50px
+    .additional
+        height: 300px !important        
+        width: 100% !important
+        flex-wrap: wrap !important
+        .td
+            width: 120px !important
+            height: 60px !important
             text-align: start !important
-        span
-            font-size: 17px !important
-            text-align: start !important
+            h3
+                font-size: 20px !important
+                text-align: start !important
+            span
+                font-size: 17px !important
+                text-align: start !important
         
 @media screen and (max-width: 385px) 
     svg
